# ts_attcpip

./: Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.py
conda/: meta.yaml
doc/: conf.py  index.rst  manifest.yaml  version_history.rst
doc/news/: DM-49880.bugfix.rst  DM-49880.feature.1.rst  DM-49880.feature.2.rst  DM-49880.feature.3.rst  DM-49880.feature.4.rst  DM-49880.feature.rst  OSW-313.perf.1.rst  OSW-313.perf.rst  OSW-842.bugfix.rst  OSW-884.feature.rst  OSW-884.perf.1.rst  OSW-884.perf.2.rst  OSW-884.perf.3.rst  OSW-884.perf.rst  README.rst
python/lsst/ts/attcpip/: __init__.py  at_server_simulator.py  at_simulator.py  command_issued.py  csc.py  enums.py
python/lsst/ts/attcpip/schemas/: __init__.py  command_disable.json  command_enable.json  command_fail_reason.json  command_standby.json  command_start.json  logevent_errorCode.json  registry.py
tests/: test_at_server_simulator.py  test_csc.py  test_registry.py  test_simulator.py
ups/: ts_attcpip.table
