[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_attcpip"
description = "An LSST Telescope and Site package that provides common TCP/IP code for interaction with the AT LabVIEW servers."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { documentation = "https://ts-attcpip.lsst.io", repository = "https://github.com/lsst-ts/ts_attcpip" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
